kubernets-deployment/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-prometheus-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: springboot-prometheus
              servicePort: 8989
